--- a/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
+++ b/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
@@ -1215,7 +1215,7 @@
         </div>
         <hr style="border-top: 1px solid #ababab;">
         
-    <div id="container-tasks">
+    <div id="container-collapse">
         <div class="d-flex gap-2 mb-3">
             <button class="btn btn-light btn-lg w-100 d-flex justify-content-between align-items-center btn-task-border" type="button" data-bs-toggle="collapse" data-bs-target="#preTasksCollapse" aria-expanded="false" aria-controls="preTasksCollapse">
                 {{ index .tab "preTasks" }}
