feat/ Status services page (with auto refresh)

--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -71,7 +71,7 @@
   <h4>{{ index .tab "monitoring" }}</h4>
   <div class="row g-3 mb-4">
     <div class="col-sm-4">
-      <a href="status_of_services.html" class="text-decoration-none text-dark">
+      <a href="status_services" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-list-check fs-2"></i>
           <div>{{ index .tab "status_of_services" }}</div>
