--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="cloud_instance_management.html" class="text-decoration-none text-dark">
+      <a href="cloud_instance_management" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-cloud-fill fs-2"></i>
           <div>{{ index .tab "cloud_instance_management" }}</div>
