--- a/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
@@ -233,7 +233,7 @@
                     <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <form method="post" class="p-3 border rounded bg-light">
-                        <input type="hidden" name="ruleID" value="{{ .ID }}">
+                        <input type="hidden" name="editRuleID" value="{{ .ID }}">
                         <div class="modal-header">
                             <h5 class="modal-title" id="editRuleModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
