rebase and fix error new linter version

--- a/pkg/admin/gui/front-end/html/status_services_page.html
+++ b/pkg/admin/gui/front-end/html/status_services_page.html
@@ -103,7 +103,7 @@
           {{ end }}
         </tbody>
       </table>
-${{ end }}
+{{ end }}
 
 {{ define "content" }}
     <div class="d-flex align-items-center justify-content-between">
