--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -57,7 +57,7 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="cryptographic_key_management.html" class="text-decoration-none text-dark">
+      <a href="cryptographic_key_management" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-key-fill fs-2"></i>
           <div>{{ index .tab "cryptographic_key_management" }}</div>
@@ -87,7 +87,7 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="snmp_management.html" class="text-decoration-none text-dark">
+      <a href="snmp_management" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-diagram-3-fill fs-2"></i>
           <div>{{ index .tab "snmp_management" }}</div>
@@ -109,7 +109,7 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="managing_authentication_authorities.html" class="text-decoration-none text-dark">
+      <a href="managing_authentication_authorities" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-shield-lock-fill fs-2"></i>
           <div>{{ index .tab "managing_authentication_authorities" }}</div>
@@ -117,7 +117,7 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="managing_configuration_overrides.html" class="text-decoration-none text-dark">
+      <a href="managing_configuration_overrides" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-sliders fs-2"></i>
           <div>{{ index .tab "managing_configuration_overrides" }}</div>
