--- a/pkg/admin/gui/front-end/html/addTasks.html
+++ b/pkg/admin/gui/front-end/html/addTasks.html
@@ -148,10 +148,10 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "info" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipInfo" }}"></i> :</label>
-        <div id="infoTransferContainer">
+        <div id="infoContainer">
             <div class="input-group mb-2">
-                <input type="text" name="infoTransferKey[]" class="form-control" placeholder="clé">
-                <input type="text" name="infoTransferValue[]" class="form-control" placeholder="valeur">
+                <input type="text" name="infoTransferKey[]" class="form-control" placeholder="{{ index .tab "fieldName" }}">
+                <input type="text" name="infoTransferValue[]" class="form-control" placeholder="{{ index .tab "value" }}">
                <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                    <i class="bi bi-trash"></i>
                 </button>
